--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,6 +1,7 @@
 # This is Git's per-user configuration file.
 [core]
 	excludesfile = ~/.gitignore_global
+	autocrlf = input
 [push]
 	default = simple
 [user]
