Adds specific remote branch for git operations to avoid doing more than expected

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -87,7 +87,7 @@
 	fpp = "!f() { \
 		git checkout master && \
 		git fetch origin --prune && \
-		git pull; \
+		git pull origin master; \
 	}; f"
 
 [apply]
