--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -90,6 +90,9 @@
 		git pull origin master; \
 	}; f"
 
+	# Clean repo to clone state but leave JetBrains config
+	clean-idea = "clean -fxd :/ -e \.idea"
+
 [apply]
 
 	# Detect whitespace errors when applying a patch
